--- a/css/style.css
+++ b/css/style.css
@@ -13,10 +13,59 @@
   padding: 50px 0px;
   background-color: rgb(185, 255, 255);
   text-align: center;
+  margin-bottom: 30px;
+}
+
+.block {
+  margin-bottom: 30px;
+}
+
+.sub-block {
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.project-block {
+  width: 100%;
+  height: 200px;
+  background-color: #bebebe;
+  border-radius: 10px;
+  margin: 30px 0px;
+  padding: 10px 15px;
+}
+
+.line-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.line-apart {
+  display: flex;
+  justify-content: space-between;
+}
+
+.inline-block {
+  display: inline-block;
+}
+
+.item-list {
+  margin-left: 40px;
+}
+
+.title {
+  font-size: 48px;
+  margin-left: 12px;
+  cursor: pointer;
 }
 
 h1 {
   font-size: 42px;
+}
+
+.h2-underscore {
+  width: 100%;
+  border-bottom: 1px solid black;
 }
 
 a:link, a:visited {
